--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "json-server": "^1.0.0-beta.3",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
