--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "json-server": "^1.0.0-beta.3",
